error.txt
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\ianheath\Desktop\jira_auto_triage\frontend\src\App.js: Identifier 'startNewChat' has already been declared. (275:10)

  273 |     };
  274 |
> 275 |     const startNewChat = () => {
      |           ^
  276 |         setMessages([initialMessage]);
  277 |         setShowSuggestions(true);
  278 |         setCurrentQuestion(null);
    at constructor (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:363:19)
    at FlowParserMixin.raise (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:6609:19)
    at FlowScopeHandler.checkRedeclarationInScope (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:1626:19)
    at FlowScopeHandler.declareName (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:1592:12)
    at FlowScopeHandler.declareName (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:1693:11)
    at FlowParserMixin.declareNameFromIdentifier (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:7538:16)
    at FlowParserMixin.checkIdentifier (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:7534:12)
    at FlowParserMixin.checkLVal (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:7475:12)
    at FlowParserMixin.parseVarId (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13327:10)
    at FlowParserMixin.parseVarId (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:3486:11)
    at FlowParserMixin.parseVar (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13302:12)
    at FlowParserMixin.parseVarStatement (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13149:10)
    at FlowParserMixin.parseStatementContent (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12770:23)
    at FlowParserMixin.parseStatementLike (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12685:17)
    at FlowParserMixin.parseStatementLike (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:2928:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12665:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13235:61)
    at FlowParserMixin.parseBlockBody (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13228:10)
    at FlowParserMixin.parseBlock (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13216:10)
    at FlowParserMixin.parseFunctionBody (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12035:24)
    at FlowParserMixin.parseFunctionBody (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:2905:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12021:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:2913:18)
    at C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13360:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12338:14)
    at FlowParserMixin.parseFunction (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13359:10)
    at FlowParserMixin.parseExportDefaultExpression (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13822:19)
    at FlowParserMixin.parseExportDefaultExpression (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:2976:18)
    at FlowParserMixin.parseExport (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13743:25)
    at FlowParserMixin.parseStatementContent (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12797:27)
    at FlowParserMixin.parseStatementLike (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12685:17)
    at FlowParserMixin.parseStatementLike (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:2928:24)
    at FlowParserMixin.parseModuleItem (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12662:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13235:36)
    at FlowParserMixin.parseBlockBody (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:13228:10)
    at FlowParserMixin.parseProgram (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12541:10)
    at FlowParserMixin.parseTopLevel (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:12531:25)
    at FlowParserMixin.parseTopLevel (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:3697:28)
    at FlowParserMixin.parse (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:14410:10)
    at parse (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\parser\lib\index.js:14444:38)
    at parser (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at step (C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\gensync\index.js:261:32)
    at C:\Users\ianheath\Desktop\jira_auto_triage\frontend\node_modules\gensync\index.js:273:13
ERROR
[eslint] 
src\App.js
  Line 275:10:  Parsing error: Identifier 'startNewChat' has already been declared. (275:10)
